@@ -21,6 +21,7 @@
 -- parsing fixes
 -- updated config_changes.txt
 -- fixed doc format and added errors.txt
+-- revised help options (again) to be more consistent with other (gnu style) programs
 
 121
 -- valgrind fixes
